# topological_insulator

./: .gitignore  README.rst  setup.cfg
data/: graphene.json  honeycomb.json  kagome.json  lieb.json  test.json
data/cases/: MOF.json  carbon.json  germanene.json  germanium.json  graphene.json  silicene.json  silicon.json
data/structures/: honeycomb.json  kagome.json
notebooks/: acceptor_bulk.ipynb  acceptor_edge.ipynb  band_inversion.ipynb  chern_invariant.ipynb  clebsch_gordan.ipynb  edge_states.ipynb  honeycomb_bulk.ipynb  honeycomb_edge.ipynb  ipynb_clebsch_gordan.ipynb  ipynb_fourier_transform.ipynb  kagome.ipynb  kagome_bulk.ipynb  kagome_edge.ipynb  lieb_bulk.ipynb  lieb_edge.ipynb  reciprocal_bulk.ipynb  reciprocal_edge.ipynb  spin_orbit_coupling.ipynb
notebooks/examples/: chern_invariant.ipynb
notebooks/project/: mean_field_problem.py
notebooks/project/acceptor/honeycomb/: acceptor_bulk.ipynb  acceptor_bulk_interaction.ipynb  acceptor_bulk_interaction_1.ipynb  (+8 more)
src/acceptor_TI/: __init__.py
src/acceptor_TI/python/: __init__.py  main.py
src/topological_insulator/: __init__.py
src/topological_insulator/python/: __init__.py  main.py
tests/: test_1.py  test_2.py
tests/geometry/: honeycomb.py  kagome.py  lattice_plot.py  test_honeycomb.py  test_kagome.py
tests/tight_binding/: analytical_bulk.py  bulk_dispersion.py  bulk_s.py  honeycomb_bulk_s.py  honeycomb_eg.py  ipynb_analytical_dispersion.ipynb  ipynb_clebsch_gordan.ipynb  ipynb_dispersion.ipynb  kagome.ipynb  p_z.ipynb  real_space.py  reciprocal_space.py  spin_orbit_coupling.ipynb
(+38 files in other folders)
