[metadata]
name = acceptor_TI
version = 1.0.0
license = AGPL-3.0
description = Acceptor arrays in topologically implanted 2D devices
long_description = file: README.rst
author = Javier Larrain Garcia-Perate
author_email = javier.lgpke@gmail.com
supervisor = Dr. Andrew J. Fisher

[options]
packages = find:
package_dir =
    =src
include_package_data = True

[options.packages.find]
where = src

# [isort]
# profile=black
# known_fenics=dolfinx
# sections=FENICS,FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
